# golf-ui-streamlit

./: .gitignore  README.md  collect_data.py  configure-kafka-server.ps1  consumer.py  functions.py  pyproject.toml  requirements.txt  run_application.py  run_container_locally.ps1
.github/workflows/: build-and-deploy.yml  build-project.yml  collect-scorecard-data.yml  collect-trackman-range-data.yml
backend/: __init__.py  collect_data.py  collect_round_data.py  collect_scorecard_data.py  collect_trackman_data.py  functions.py
backend/functions/: __init__.py  blob_client.py  data_functions.py  logging.py  scorecard.py  scorecard_aggregator.py  scorecard_navigator.py  scorecard_parser.py  selenium_driver.py  trackman.py  trackman_aggregator.py  trackman_auth.py  trackman_parser.py
backend/interfaces/: __init__.py  data_collection_base.py  selenium_driver_base.py
frontend/: Dockerfile  __init__.py  entrypoint.sh  main.py
frontend/functions/: __init__.py  data_functions.py  logging_functions.py  navigation.py  plots.py  ui_components.py  ui_sections.py
frontend/pages/: 10_Application Analytics.py  1_Trackman Club Analysis.py  3_Trackman Yardages.py  Trackman Analysis.py  course_hole_by_hole_analysis.py  course_overview.py  home.py  trackman_club_analysis.py  trackman_yardages.py
infra/: main.tf  values.tfvars
shared/: __init__.py
shared/functions/: __init__.py  blob_client.py  variables.py
shared/interfaces/: __init__.py  blob_client_base.py
tests/features/: frontend_aggregate_fairway_data.feature  frontend_extract_stat_flags.feature
tests/features/steps/: frontend_aggregate_fairway_steps.py  frontend_extract_stat_flags_steps.py
tests/integration_tests/backend/: test_scorecard_parser.py
tests/unit_tests/: test_scorecard_parser.py
tests/unit_tests/backend/: test_logging.py  test_scorecard_aggregator.py  test_scorecard_parser.py  test_selenium_driver.py
tests/unit_tests/frontend/: test_data_functions.py  test_display_club_metrics.py  test_get_navigation.py  test_navigation.py  test_plots.py  test_ui_components.py
tests/unit_tests/shared/: test_blob_client.py  (+1 more)
